1. add zm am chart line 2. change enum name, change xdgk.common.state to status

--- a/8.Src/v2work/YongShuiGuanLiV2/Web.config
+++ b/8.Src/v2work/YongShuiGuanLiV2/Web.config
@@ -10,7 +10,8 @@
 					<section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
 					<section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/></sectionGroup></sectionGroup></sectionGroup></configSections><appSettings>
 		<add key="amcharts_net_key" value="AMCHART-NETL-Cracked-10-10-1244"/>
-		<add key="ConnectionString" value="server=192.168.2.78;initial catalog=YeHeSLDBV2-3;user=sa;password=sa"/>
+		<!--<add key="ConnectionString" value="server=192.168.2.78;initial catalog=YeHeSLDBV2-3;user=sa;password=sa"/>-->
+		<add key="ConnectionString" value="server=192.168.1.161;initial catalog=YeHeSLDBV2-3;user=sa;password=sa"/>
 		<add key="ConnectionString_wmgis" value="server=192.168.2.65;initial catalog=wmgis;user=sa;password=yh87886780"/>
 		<add key="ConnectionString_yhxx" value="server=192.168.2.78;initial catalog=yhxx;user=sa;password=sa"/>
 		<!--<add key="ConnectionString" value="server=192.168.2.78;initial catalog=YeHeSLDBV2-3;user=sa;password=sa"/>-->
